Add background and choose skills text

--- a/p3ppc.manualSkillInheritance/ModConfig.json
+++ b/p3ppc.manualSkillInheritance/ModConfig.json
@@ -16,7 +16,8 @@
   "IsUniversalMod": false,
   "ModDependencies": [
     "reloaded.sharedlib.hooks",
-    "Reloaded.Memory.SigScan.ReloadedII"
+    "Reloaded.Memory.SigScan.ReloadedII",
+    "p5rpc.modloader"
   ],
   "OptionalDependencies": [],
   "SupportedAppId": ["p3p.exe"],
