Add Traditional Chinese language

--- a/p3ppc.manualSkillInheritance/ModConfig.json
+++ b/p3ppc.manualSkillInheritance/ModConfig.json
@@ -114,7 +114,8 @@
   "ModDependencies": [
     "p5rpc.modloader",
     "Reloaded.Memory.SigScan.ReloadedII",
-    "reloaded.sharedlib.hooks"
+    "reloaded.sharedlib.hooks",
+    "crifs.v2.hook"
   ],
   "OptionalDependencies": [],
   "SupportedAppId": [
