--- a/p3ppc.manualSkillInheritance/p3ppc.manualSkillInheritance.csproj
+++ b/p3ppc.manualSkillInheritance/p3ppc.manualSkillInheritance.csproj
@@ -27,6 +27,8 @@
   <Import Project="Reloaded.Checks.targets" />
 
   <ItemGroup>
+    <None Remove="Files\Traditional_Chinese\umd0\facility\combine.bin" />
+    <None Remove="Files\Traditional_Chinese\umd0\facility\combine\inheritance.spr" />
     <None Remove="ModConfig.json" />
     <None Remove="Publish.ps1" />
     <None Remove="BuildLinked.ps1" />
@@ -35,6 +37,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Files\Traditional_Chinese\umd0\facility\combine.bin">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Files\Traditional_Chinese\umd0\facility\combine\inheritance.spr">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="ModConfig.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -58,10 +66,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Submodules\CriFs.V2.Hook.ReloadedII\Interfaces\CriFs.V2.Hook.Interfaces\CriFs.V2.Hook.Interfaces.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Files\Traditional_Chinese\" />
   </ItemGroup>
 
 </Project>
