Add Japanese translation

--- a/p3ppc.manualSkillInheritance/p3ppc.manualSkillInheritance.csproj
+++ b/p3ppc.manualSkillInheritance/p3ppc.manualSkillInheritance.csproj
@@ -29,6 +29,8 @@
   <ItemGroup>
     <None Remove="Files\French\umd0\facility\combine.bin" />
     <None Remove="Files\French\umd0\facility\combine\inheritance.spr" />
+    <None Remove="Files\Japanese\umd0\facility\combine.bin" />
+    <None Remove="Files\Japanese\umd0\facility\combine\inheritance.spr" />
     <None Remove="Files\Spanish\umd0\facility\combine.bin" />
     <None Remove="Files\Spanish\umd0\facility\combine\inheritance.spr" />
     <None Remove="Files\Traditional_Chinese\umd0\facility\combine.bin" />
@@ -45,6 +47,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Files\French\umd0\facility\combine\inheritance.spr">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Files\Japanese\umd0\facility\combine.bin">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Files\Japanese\umd0\facility\combine\inheritance.spr">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Files\Spanish\umd0\facility\combine.bin">
